--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "next": "latest",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.23"
   }
 }
